# flo101-assignment

./: .dockerignore  .env.aws.example  .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  DEPLOY_AWS.md  EVAL.md  Makefile  PRODUCT.md  README.md  docker-compose.aws.yml  docker-compose.dev.yml  docker-compose.yml  openapi.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
apps/api/evals/: conftest.py  test_critic_calibration.py  test_offline_capabilities.py  test_safety_input.py  test_synthesizer_coherence.py
apps/api/src/flo101_api/: __init__.py  config.py  main.py
apps/api/src/flo101_api/api/: meta.py  routes.py
apps/api/src/flo101_api/corpus/: __init__.py  chunking.py  ingest.py  retrieve.py  summary.py
apps/api/src/flo101_api/critic/: __init__.py  capabilities.py  graph.py  nodes.py  responses.py  run.py  state.py
apps/api/src/flo101_api/db/: __init__.py  artifacts.py  corpus.py  evaluations.py  specs.py  store.py
apps/api/src/flo101_api/domain/: __init__.py  _base.py  artifact.py  corpus.py  enums.py  errors.py  evaluation.py  rubric.py  spec.py
apps/api/src/flo101_api/llm/: __init__.py  factory.py  gateway.py  openrouter_gateway.py  tracing.py
apps/api/src/flo101_api/llm/prompts/: __init__.py  rubric_critique.py  safety_disposition.py  safety_input.py  synthesizer.py
apps/api/src/flo101_api/observability/: __init__.py  logging.py
apps/api/src/flo101_api/scripts/: export_schema.py  seed.py
apps/api/src/flo101_api/synthesizer/: __init__.py  agent.py  models.py
apps/api/tests/: conftest.py  fake_gateway.py  test_critic_paths.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Panel.tsx  (+15 more)
scripts/: bootstrap-ec2-ubuntu.sh  deploy-aws.sh
tooling/tsconfig/: base.json  package.json  react.json
(+2 files in other folders)
