[project]
name = "flo101-api"
version = "0.1.0"
description = "flo101 Critic Agent — FastAPI service"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    # Schema / config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # Agent orchestration
    "langgraph>=0.2.50",
    "langsmith>=0.2.0",
    # LLM access
    "openai>=1.55.0",
    # Storage
    "sqlite-vec>=0.1.6",
    # Observability
    "structlog>=24.4.0",
    # HTTP / IO
    "httpx>=0.28.0",
    # Misc
    "tenacity>=9.0.0",
]

[project.scripts]
flo101-api = "flo101_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flo101_api"]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "datamodel-code-generator>=0.26.0",
]

[tool.uv]
package = true

[tool.pyright]
include = ["src", "tests", "evals"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "strict"
pythonVersion = "3.13"
# Strict for our code, soft for third-party SDKs without proper stubs
# (openai, langsmith, langgraph, tenacity).
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUntypedFunctionDecorator = "warning"
reportDeprecated = "warning"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
addopts = "-v --strict-markers"
